--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:zxlEnHuNvHfTrkgrQpNcfOfN8Z7SwbfMtC7L4Alc2vs=
+APP_KEY=base64:8zDtsklLIGZ47JGGGDvVFknEpO/N/OSllDBLy2euKx4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=auto
+DB_DATABASE=automontano
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=saif786
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,5 +42,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-MIX_CONTENT_DIRECTION="ltr"
